feat: search in ListElement

--- a/css/style.css
+++ b/css/style.css
@@ -10790,4 +10790,14 @@ header img {
   padding-top: 1rem;
 }
 
+ul {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+ul li {
+  width: 33.33%;
+  list-style: none;
+}
+
 /*# sourceMappingURL=style.css.map */
