--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,80 +1,146 @@
 $newBlue: #3282f7;
-$newGreen: #68D9A4;
-$newRed: #ED6454;
-.form-control{
-    &:focus{
-        outline: none;
-        box-shadow: none;
-    }
+$newGreen: #68d9a4;
+$newRed: #ed6454;
+* {
+	padding: 0;
+	margin: 0;
+	font-family: "Lato", sans-serif;
+	font-weight: 400;
+	font-size: 16px;
 }
-#secondSearch{
-    display: flex;
-    flex-flow: row wrap;
+a {
+	text-decoration: none;
 }
-header{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    img{
-        width: 75%;
-        padding-top: 1rem;
-    }
+ul {
+	li {
+		list-style: none;
+	}
+}
+.form-control {
+	&:focus {
+		outline: none;
+		box-shadow: none;
+	}
+}
+#secondSearch {
+	display: flex;
+	flex-flow: row wrap;
+}
+header {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	img {
+		width: 40%;
+		padding-top: 1rem;
+	}
 }
 
-#ingSearch{
-    .list-container{
-        background-color: $newBlue;
-        ul{
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: space-between;
-            li{
-                width:25%;
-                list-style: none;
-                cursor: pointer;
-                &:hover{
-                    color: beige;
-                }
-        }
-        
-    }
-    }
+#ingSearch {
+	.list-container {
+		background-color: $newBlue;
+		// ul {
+		// 	display: flex;
+		// 	flex-flow: row wrap;
+		// 	justify-content: space-between;
+		// 	li {
+		// 		padding: 10px;
+		// 		color: white;
+		// 		width: calc(33.33% - 20px);
+		// 		list-style: none;
+		// 		cursor: pointer;
+		// 		&:hover {
+		// 			color: beige;
+		// 		}
+		// 	}
+		// }
+	}
 }
-#appSearch{
-    .list-container{
-        background-color: $newGreen;
-        ul{
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: space-between;
-            li{
-                width: 33.33%;
-                list-style: none;
-                cursor: pointer;
-                &:hover{
-                    color: beige;
-                }
-        }
-        
-    }
-    }
+.list-container {
+	ul {
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: space-evenly;
+		li {
+			font-size: 18px;
+			padding: 10px;
+			color: white;
+			width: calc(33.33% - 20px);
+			list-style: none;
+			cursor: pointer;
+			&:hover {
+				color: beige;
+			}
+		}
+	}
 }
-#ustSearch{
-    .list-container{
-        background-color: $newRed;
-        ul{
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: space-between;
-            li{
-                width: 33.33%;
-                list-style: none;
-                cursor: pointer;
-                &:hover{
-                    color: beige;
-                }
-            }
-        
-    }
-    }
+#appSearch {
+	.list-container {
+		background-color: $newGreen;
+		// ul {
+		// 	display: flex;
+		// 	flex-flow: row wrap;
+		// 	justify-content: space-between;
+		// 	li {
+		// 		padding: 10px;
+		// 		color: white;
+		// 		width: calc(33.33% - 20px);
+		// 		list-style: none;
+		// 		cursor: pointer;
+		// 		&:hover {
+		// 			color: beige;
+		// 		}
+		// 	}
+		// }
+	}
+}
+#ustSearch {
+	.list-container {
+		background-color: $newRed;
+		// ul {
+		// 	display: flex;
+		// 	flex-flow: row wrap;
+		// 	justify-content: space-between;
+		// 	li {
+		// 		padding: 10px;
+		// 		color: white;
+		// 		width: calc(33.33% - 20px);
+		// 		list-style: none;
+		// 		cursor: pointer;
+		// 		&:hover {
+		// 			color: beige;
+		// 		}
+		// 	}
+		// }
+	}
+}
+@media screen and (min-width: 1440px) {
+	body {
+		width: 1440px;
+		margin: auto;
+	}
+}
+.input-group {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	#searchForm {
+		width: 100%;
+		height: 69px;
+		background-color: #e7e7e7;
+		border: none;
+		border-top-left-radius: 5px;
+		border-bottom-left-radius: 5px;
+		outline: none;
+		padding-left: 20px;
+	}
+	i {
+		display: flex;
+		align-items: center;
+		background-color: #e7e7e7;
+		font-size: xx-large;
+		padding-right: 10px;
+		border-top-right-radius: 5px;
+		border-bottom-right-radius: 5px;
+	}
 }
