--- a/css/style.css
+++ b/css/style.css
@@ -156,12 +156,46 @@ header img {
   }
 }
 @media screen and (max-width: 767px) {
+  main {
+    padding: 0;
+  }
   #secondSearch {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     position: relative;
+    width: 100%;
+  }
+  #secondSearch .secondSearch {
+    border-radius: 0;
+    margin: 20px 0 20px;
+  }
+  #secondSearch .secondSearch .input-btn {
+    width: 90%;
+  }
+  #secondSearch .secondSearch .list-container {
+    border-radius: 0;
+  }
+  #secondSearch .secondSearch .list-container ul {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  #secondSearch .secondSearch .list-container ul li {
+    font-size: 18px;
+    padding: 10px 5px 10px;
+    color: white;
+    width: calc(25% - 20px);
+    list-style: none;
+    cursor: pointer;
+  }
+  #secondSearch .secondSearch .list-container ul li:hover {
+    color: beige;
+  }
+  #secondSearch .btn-dropdown {
+    margin-top: 10px;
+    border-radius: 0;
   }
 }
 #content-card {
@@ -251,15 +285,23 @@ header img {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+  #content-card {
+    margin-top: 10px;
+  }
   #content-card .card {
     width: calc(50% - 40px);
     padding-bottom: 20px;
   }
 }
 @media screen and (max-width: 767px) {
+  #content-card {
+    margin-top: 10px;
+  }
   #content-card .card {
-    width: calc(100% - 40px);
+    width: 100%;
     padding-bottom: 20px;
+    margin: 20px 20px;
+    border-radius: 2px;
   }
 }
 
