--- a/scss/card.scss
+++ b/scss/card.scss
@@ -88,6 +88,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 	#content-card {
+		margin-top: 10px;
 		.card {
 			width: calc(50% - 40px);
 			padding-bottom: 20px;
@@ -97,9 +98,12 @@
 
 @media screen and (max-width: 767px) {
 	#content-card {
+		margin-top: 10px;
 		.card {
-			width: calc(100% - 40px);
+			width: 100%;
 			padding-bottom: 20px;
+			margin: 20px 20px;
+			border-radius: 2px;
 		}
 	}
 }
