--- a/scss/all.scss
+++ b/scss/all.scss
@@ -124,6 +124,29 @@ header {
 		}
 	}
 }
+#tag-container {
+	ul {
+		display: flex;
+		flex-flow: row wrap;
+		li {
+			margin: 10px;
+			display: flex;
+			border-radius: 5px;
+			color: white;
+			justify-content: space-between;
+			align-items: center;
+			padding: 10px;
+			max-width: 25%;
+			i {
+				padding-left: 10px;
+				&:hover {
+					cursor: pointer;
+					color: rgb(70, 70, 70);
+				}
+			}
+		}
+	}
+}
 @media screen and (min-width: 1440px) {
 	body {
 		width: 1440px;
@@ -193,22 +216,6 @@ header {
 			}
 			.list-container {
 				border-radius: 0;
-				ul {
-					display: flex;
-					flex-flow: row wrap;
-					justify-content: space-between;
-					li {
-						font-size: 18px;
-						padding: 10px 5px 10px;
-						color: white;
-						width: calc(25% - 20px);
-						list-style: none;
-						cursor: pointer;
-						&:hover {
-							color: beige;
-						}
-					}
-				}
 			}
 		}
 
