--- a/scss/all.scss
+++ b/scss/all.scss
@@ -71,7 +71,7 @@ header {
 					list-style: none;
 					cursor: pointer;
 					&:hover {
-						color: beige;
+						color: rgb(70, 70, 70);
 					}
 				}
 			}
