--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,12 @@ header img {
 #secondSearch {
   display: flex;
   position: absolute;
+  max-width: calc(83.33% - 20px);
+  overflow: hidden;
   z-index: 3;
 }
 #secondSearch .secondSearch {
-  width: 667px;
+  width: calc(100% - 10px);
   border-radius: 5px;
   margin: 20px 5px 10px 0;
 }
@@ -52,7 +54,7 @@ header img {
   align-items: center;
 }
 #secondSearch .secondSearch .input-btn input {
-  width: 90%;
+  width: 100%;
   background-color: transparent;
   border: none;
   color: white;
@@ -71,7 +73,7 @@ header img {
   font-size: 18px;
   padding: 10px;
   color: white;
-  width: calc(33.33% - 20px);
+  min-width: calc(33.33% - 20px);
   list-style: none;
   cursor: pointer;
 }
@@ -139,12 +141,17 @@ header img {
   color: rgb(70, 70, 70);
 }
 
-@media screen and (min-width: 1440px) {
-  body {
-    width: 1440px;
-    margin: auto;
-  }
+.getError {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 3rem;
+  width: 100%;
+  color: #ed6454;
+  font-size: 32px;
+  font-weight: 700;
 }
+
 .input-group {
   display: flex;
   flex-direction: row;
@@ -187,11 +194,13 @@ header img {
     align-items: center;
     flex-direction: column;
     position: relative;
+    max-width: 100%;
     width: 100%;
   }
   #secondSearch .secondSearch {
+    width: 100%;
     border-radius: 0;
-    margin: 20px 0 20px;
+    margin: 0;
   }
   #secondSearch .secondSearch .input-btn {
     width: 90%;
@@ -200,7 +209,8 @@ header img {
     border-radius: 0;
   }
   #secondSearch .btn-dropdown {
-    margin-top: 10px;
+    width: 100%;
+    margin: 0;
     border-radius: 0;
   }
 }
@@ -248,6 +258,7 @@ header img {
   white-space: nowrap;
   text-overflow: ellipsis;
   font-size: 18px;
+  width: 75%;
 }
 #content-card .card a .card__time {
   display: flex;
