--- a/scss/card.scss
+++ b/scss/card.scss
@@ -40,6 +40,7 @@
 					white-space: nowrap;
 					text-overflow: ellipsis;
 					font-size: 18px;
+					width: 75%;
 				}
 				&_time {
 					display: flex;
