--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,15 @@ header img {
   padding: 10px;
   max-width: 25%;
 }
+#tag-container ul li.ing {
+  background-color: #3282f7;
+}
+#tag-container ul li.app {
+  background-color: #68d9a4;
+}
+#tag-container ul li.ust {
+  background-color: #ed6454;
+}
 #tag-container ul li i {
   padding-left: 10px;
 }
