--- a/scss/all.scss
+++ b/scss/all.scss
@@ -142,6 +142,15 @@ header {
 			align-items: center;
 			padding: 10px;
 			max-width: 25%;
+			&.ing {
+				background-color: #3282f7;
+			}
+			&.app {
+				background-color: #68d9a4;
+			}
+			&.ust {
+				background-color: #ed6454;
+			}
 			i {
 				padding-left: 10px;
 				&:hover {
