--- a/css/style.css
+++ b/css/style.css
@@ -307,11 +307,12 @@ header img {
 }
 #content-card .card a .card__description {
   width: 100%;
-  height: 100%;
+  height: 80pt;
   padding-left: 5px;
   font-size: 12px;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  padding: 1em;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
