--- a/scss/card.scss
+++ b/scss/card.scss
@@ -76,11 +76,12 @@
 				}
 				&_description {
 					width: 100%;
-					height: 100%;
+					height: 80pt;
 					padding-left: 5px;
 					font-size: 12px;
-					overflow: hidden;
-					text-overflow: ellipsis;
+					overflow-y: scroll;
+					scrollbar-width: none;
+					padding: 1em;
 				}
 			}
 		}
