--- a/scss/all.scss
+++ b/scss/all.scss
@@ -64,7 +64,7 @@ header {
 			width: 100%;
 
 			ul {
-				height: 150pt;
+				max-height: 150pt;
 				overflow-y: scroll;
 				scrollbar-width: thin;
 				scrollbar-color: white transparent;
@@ -223,8 +223,7 @@ header {
 		align-items: center;
 		flex-direction: column;
 		position: relative;
-		max-width: 100%;
-		width: 100%;
+		min-width: 100%;
 		.secondSearch {
 			width: 100%;
 			border-radius: 0;
@@ -238,7 +237,7 @@ header {
 		}
 
 		.btn-dropdown {
-			width: 100%;
+			min-width: 100%;
 			margin: 0;
 			border-radius: 0;
 		}
