--- a/scss/all.scss
+++ b/scss/all.scss
@@ -64,7 +64,7 @@ header {
 			width: 100%;
 
 			ul {
-				max-height: 150pt;
+				height: 150pt;
 				overflow-y: scroll;
 				scrollbar-width: thin;
 				scrollbar-color: white transparent;
