--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ header img {
   width: 100%;
 }
 #secondSearch .secondSearch .list-container ul {
-  max-height: 150pt;
+  height: 150pt;
   overflow-y: scroll;
   scrollbar-width: thin;
   scrollbar-color: white transparent;
