--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ header img {
   width: 100%;
 }
 #secondSearch .secondSearch .list-container ul {
-  height: 150pt;
+  max-height: 150pt;
   overflow-y: scroll;
   scrollbar-width: thin;
   scrollbar-color: white transparent;
@@ -204,6 +204,8 @@ header img {
   #secondSearch {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
     min-width: 100%;
     width: 100%;
