--- a/scss/all.scss
+++ b/scss/all.scss
@@ -64,7 +64,7 @@ header {
 			width: 100%;
 
 			ul {
-				height: 150pt;
+				max-height: 150pt;
 				overflow-y: scroll;
 				scrollbar-width: thin;
 				scrollbar-color: white transparent;
@@ -220,6 +220,8 @@ header {
 	#secondSearch {
 		display: flex;
 		flex-direction: column;
+		justify-content: center;
+		align-items: center;
 		position: relative;
 		min-width: 100%;
 		width: 100%;
